--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-rest-auth==0.9.2
 django-rest-swagger==2.2.0
 django-settings-export==1.2.1
 django-split-settings==0.3.0
+django-sslserver==0.19
 django-storages==1.7.1
 django-tempus-dominus==5.1.2.3
 djangorestframework==3.7.7
@@ -68,7 +69,7 @@ python-http-client==3.1.0
 python3-openid==3.1.0
 pytz==2017.3
 PyYAML==3.13
-requests==2.18.4
+requests
 requests-oauthlib==0.8.0
 scipy==1.1.0
 sendgrid==3.6.5
